syntax = "proto3";
package padlocal;
option java_package = "com.webot.padlocal.proto";
option java_multiple_files = true;

service PadLocal {
  rpc action (stream ActionMessage) returns (stream ActionMessage) {
  }
  rpc init (InitRequest) returns (InitResponse) {
  }
}

message ActionMessageHeader {
  int32 seq = 1;
  int32 ack = 2;
}

message ActionMessage {
  ActionMessageHeader header = 1;
  oneof payload {
    WeChatRequest wechatRequest = 10;
    WeChatResponse wechatResponse = 11;
    WeChatStreamRequest weChatStreamRequest = 12;
    WeChatStreamResponse weChatStreamResponse = 13;
    WeChatStreamResponseReply weChatStreamResponseReply = 14;
    SystemEventRequest systemEventRequest = 15;
    SystemEventResponse systemEventResponse = 16;

    LongLinkInitRequest longLinkInitRequest = 80;
    LongLinkInitResponse longLinkInitResponse = 81;
    LongLinkPackRequest longLinkPackRequest = 82;
    LongLinkPackResponse longLinkPackResponse = 83;
    LongLinkUnpackRequest longLinkUnpackRequest = 84;
    LongLinkUnpackResponse longLinkUnpackResponse = 85;
    LongLinkHeartBeatRequest longLinkHeartBeatRequest = 86;
    LongLinkHeartBeatResponse longLinkHeartBeatResponse = 87;

    SyncRequest syncRequest = 100;
    SyncResponse syncResponse = 101;
    SyncEvent syncEvent = 102;

    LoginRequest loginRequest = 200;
    LoginUpdateEvent loginUpdateEvent = 201;
    LoginResponse loginResponse = 202;
    LogoutRequest logoutRequest = 203;
    LogoutResponse logoutResponse = 204;

    SendTextMessageRequest sendTextMessageRequest = 300;
    SendTextMessageResponse sendTextMessageResponse = 301;
    SendImageMessageRequest sendImageMessageRequest = 302;
    SendImageMessageResponse sendImageMessageResponse = 303;
    SendAppMessageRequest sendAppMessageRequest = 304;
    SendAppMessageResponse sendAppMessageResponse = 305;
    GetMessageImageRequest getMessageImageRequest = 306;
    GetMessageImageResponse getMessageImageResponse = 307;
    GetMessageVoiceRequest getMessageVoiceRequest = 308;
    GetMessageVoiceResponse getMessageVoiceResponse = 309;
    GetMessageVideoThumbRequest getMessageVideoThumbRequest = 310;
    GetMessageVideoThumbResponse getMessageVideoThumbResponse = 311;
    GetMessageVideoRequest getMessageVideoRequest = 312;
    GetMessageVideoResponse getMessageVideoResponse = 313;
    GetMessageAttachRequest getMessageAttachRequest = 314;
    GetMessageAttachResponse getMessageAttachResponse = 315;
    ForwardMessageRequest forwardMessageRequest = 316;
    ForwardMessageResponse forwardMessageResponse = 317;
    GetMessageAttachThumbRequest getMessageAttachThumbRequest = 318;
    GetMessageAttachThumbResponse getMessageAttachThumbResponse = 319;
    RevokeMessageRequest revokeMessageRequest = 320;
    RevokeMessageResponse revokeMessageResponse = 321;
    SendContactCardMessageRequest sendContactCardMessageRequest = 322;
    SendContactCardMessageResponse sendContactCardMessageResponse = 323;
    SendVoiceMessageRequest sendVoiceMessageRequest = 324;
    SendVoiceMessageResponse sendVoiceMessageResponse = 325;
    SendVideoMessageRequest sendVideoMessageRequest = 326;
    SendVideoMessageResponse sendVideoMessageResponse = 327;
    SendFileMessageRequest sendFileMessageRequest = 328;
    SendFileMessageResponse sendFileMessageResponse = 329;
    GetMessageMiniProgramThumbRequest getMessageMiniProgramThumbRequest = 330;
    GetMessageMiniProgramThumbResponse getMessageMiniProgramThumbResponse = 331;
    GetEncryptedFileRequest getEncryptedFileRequest = 332;
    GetEncryptedFileResponse getEncryptedFileResponse = 333;
    SendEmojiMessageRequest sendEmojiMessageRequest = 334;
    SendEmojiMessageResponse sendEmojiMessageResponse = 335;

    SyncContactRequest syncContactRequest = 400;
    SyncContactResponse syncContactResponse = 401;
    AcceptUserRequest acceptUserRequest = 402;
    AcceptUserResponse acceptUserResponse = 403;
    AddContactRequest addContactRequest = 404;
    AddContactResponse addContactResponse = 405;
    DeleteContactRequest deleteContactRequest = 406;
    DeleteContactResponse deleteContactResponse = 407;
    GetContactRequest getContactRequest = 408;
    GetContactResponse getContactResponse = 409;
    GetContactQRCodeRequest getContactQRCodeRequest = 410;
    GetContactQRCodeResponse getContactQRCodeResponse = 411;
    SearchContactRequest searchContactRequest = 412;
    SearchContactResponse searchContactResponse = 413;
    UpdateSelfNickNameRequest updateSelfNickNameRequest = 414;
    UpdateSelfNickNameResponse updateSelfNickNameResponse = 415;
    UpdateSelfSignatureRequest updateSelfSignatureRequest = 416;
    UpdateSelfSignatureResponse updateSelfSignatureResponse = 417;
    ZombieTestRequest zombieTestRequest = 418;
    ZombieTestResponse zombieTestResponse = 419;
    UpdateContactRemarkRequest updateContactRemarkRequest = 420;
    UpdateContactRemarkResponse updateContactRemarkResponse = 421;

    CreateChatRoomRequest createChatRoomRequest = 500;
    CreateChatRoomResponse createChatRoomResponse = 501;
    GetChatRoomMembersRequest getChatRoomMembersRequest = 502;
    GetChatRoomMembersResponse getChatRoomMembersResponse = 503;
    GetChatRoomQrCodeRequest getChatRoomQrCodeRequest = 504;
    GetChatRoomQrCodeResponse getChatRoomQrCodeResponse = 505;
    GetChatRoomMemberRequest getChatRoomMemberRequest = 506;
    GetChatRoomMemberResponse getChatRoomMemberResponse = 507;
    SetChatRoomAnnouncementRequest setChatRoomAnnouncementRequest = 508;
    SetChatRoomAnnouncementResponse setChatRoomAnnouncementResponse = 509;
    AddChatRoomMemberRequest addChatRoomMemberRequest = 510;
    AddChatRoomMemberResponse addChatRoomMemberResponse = 511;
    DeleteChatRoomMemberRequest deleteChatRoomMemberRequest = 514;
    DeleteChatRoomMemberResponse deleteChatRoomMemberResponse = 515;
    SetChatRoomNameRequest setChatRoomNameRequest = 516;
    SetChatRoomNameResponse setChatRoomNameResponse = 517;
    QuitChatRoomRequest quitChatRoomRequest = 518;
    QuitChatRoomResponse quitChatRoomResponse = 519;
    GetChatRoomAnnouncementRequest getChatRoomAnnouncementRequest = 520;
    GetChatRoomAnnouncementResponse getChatRoomAnnouncementResponse = 521;
    AcceptChatRoomInvitationRequest acceptChatRoomInvitationRequest = 522;
    AcceptChatRoomInvitationResponse acceptChatRoomInvitationResponse = 523;

    AddLabelRequest addLabelRequest = 600;
    AddLabelResponse addLabelResponse = 601;
    RemoveLabelRequest removeLabelRequest = 602;
    RemoveLabelResponse removeLabelResponse = 603;
    GetLabelListRequest getLabelListRequest = 604;
    GetLabelListResponse getLabelListResponse = 605;
    SetContactLabelRequest setContactLabelRequest = 606;
    SetContactLabelResponse setContactLabelResponse = 607;

    SnsSendMomentRequest snsSendMomentRequest = 700;
    SnsSendMomentResponse snsSendMomentResponse = 701;
    SnsForwardMomentRequest snsForwardMomentRequest = 702;
    SnsForwardMomentResponse snsForwardMomentResponse = 703;
    SnsGetUserPageRequest snsGetUserPageRequest = 704;
    SnsGetUserPageResponse snsGetUserPageResponse = 705;
    SnsGetTimelineRequest snsGetTimelineRequest = 706;
    SnsGetTimelineResponse snsGetTimelineResponse = 707;
    SnsGetMomentRequest snsGetMomentRequest = 708;
    SnsGetMomentResponse snsGetMomentResponse = 709;
    SnsSendCommentRequest snsSendCommentRequest = 710;
    SnsSendCommentResponse snsSendCommentResponse = 711;
    SnsUploadImageRequest snsUploadImageRequest = 712;
    SnsUploadImageResponse snsUploadImageResponse = 713;
    SnsLikeMomentRequest snsLikeMomentRequest = 714;
    SnsLikeMomentResponse snsLikeMomentResponse = 715;
    SnsUnlikeMomentRequest snsUnlikeMomentRequest = 716;
    SnsUnlikeMomentResponse snsUnlikeMomentResponse = 717;
    SnsRemoveMomentCommentRequest snsRemoveMomentCommentRequest = 718;
    SnsRemoveMomentCommentResponse snsRemoveMomentCommentResponse = 719;
    SnsMakeMomentPrivateRequest snsMakeMomentPrivateRequest = 720;
    SnsMakeMomentPrivateResponse snsMakeMomentPrivateResponse = 721;
    SnsMakeMomentPublicRequest snsMakeMomentPublicRequest = 722;
    SnsMakeMomentPublicResponse snsMakeMomentPublicResponse = 723;
    SnsRemoveMomentRequest snsRemoveMomentRequest = 724;
    SnsRemoveMomentResponse snsRemoveMomentResponse = 725;
  }
}

message InitRequest {
  string token = 1;
}

message ServerInfo {
  Host host = 1;
  string pdlToken = 2;
  bytes serverCA = 3;
}

message InitResponse {
  ServerInfo serverInfo = 1;
}

message WeChatLongLinkRequest {
  string messageId = 1;
  string longLinkId = 2;
  bool initPhase = 3;
}

message WeChatLongLinkResponse {
}

message WeChatShortLinkRequest {
  Host host = 1;
  string path = 2;
  bytes payload = 3;
}

message WeChatShortLinkResponse {
  bytes payload = 1;
}

message WeChatHttpRequest {
  string url = 1;
  string method = 2;
  map<string, string> headers = 3;
  bytes payload = 4;
  int32 timeout = 5;
}

message WeChatHttpResponse {
  int32 statusCode = 1;
  map<string, string> headers = 2;
  bytes payload = 3;
}

message WeChatRequest {
  oneof payload {
    WeChatLongLinkRequest longLinkRequest = 10;
    WeChatShortLinkRequest shortLinkRequest = 11;
    WeChatHttpRequest httpRequest = 12;
  }
}

message WeChatResponse {
  oneof payload {
    WeChatLongLinkResponse longLinkResponse = 10;
    WeChatShortLinkResponse shortLinkResponse = 11;
    WeChatHttpResponse httpResponse = 12;
  }
}

message WeChatLongLinkStreamRequest {
  bytes payload = 1;
  string longLinkId = 2;
  bool initPhase = 3;
}

message WeChatLongLinkStreamResponse {
  bytes payload = 1;
}

message WeChatLongLinkStreamResponseReply {
  bytes payload = 1;
}

message WeChatSocketRequest {
  Host host = 1;
  bytes payload = 2;
}

message WeChatSocketResponse {
  bool socketReset = 1;
  bytes payload = 2;
}

message WeChatSocketResponseReply {
}

message FileUploadDataMeta {
  int32 size = 1;
  string md5 = 2;
  int64 checksum = 3;
}

message FileUploadEncryptedDataMeta {
  int32 size = 1;
  string md5 = 2;
  int64 checksum = 3;
  bytes aesKey = 4;
}

message FileUploadImageMeta {
  FileUploadDataMeta plainDataMeta = 1;
  FileUploadEncryptedDataMeta encryptedDataMeta = 2;
  int32 width = 3;
  int32 height = 4;
}

message FileUploadVideoMeta {
  FileUploadDataMeta plainDataMeta = 1;
  FileUploadEncryptedDataMeta encryptedDataMeta = 2;
  int32 duration = 4;
}

message FileUploadImageParams {
  FileUploadImageMeta imageMeta = 1;
  FileUploadImageMeta thumbImageMeta = 2;
}

message FileUploadVideoParams {
  FileUploadVideoMeta videoMeta = 1;
  FileUploadImageMeta thumbImageMeta = 2;
}

message FileUploadFileParams {
  FileUploadDataMeta plainDataMeta = 1;
  FileUploadEncryptedDataMeta encryptedDataMeta = 2;
}

message FileUploadPayloadFragment {
  oneof payload {
    bytes binary = 1;
    string placeHolderBinaryMd5 = 2;
  }
}

message FileUploadPayload {
  repeated FileUploadPayloadFragment fragment = 1;
}

message WeChatFileUploadRequest {
  Host host = 1;
  FileUploadPayload payload = 2;
  repeated string requireResponseField = 3;
}

message WeChatFileUploadResponse {
  map<string, bytes> response = 1;
}

message WeChatFileUploadResponseReply {
}

message WeChatPushSubscribeRequest {
  repeated LongLinkMessagePushType pushType = 1;
}

message WeChatPushSubscribeResponse {
  repeated LongLinkMessage message = 1;
}

message WeChatPushSubscribeResponseReply {
}

message WeChatStreamRequest {
  bool eof = 1;
  oneof payload {
    WeChatLongLinkStreamRequest longLinkRequest = 10;
    WeChatSocketRequest socketRequest = 11;
    WeChatPushSubscribeRequest pushSubscribeRequest = 12;
    WeChatFileUploadRequest fileUploadRequest = 13;
  }
}

message WeChatStreamResponse {
  bool eof = 1;
  oneof payload {
    WeChatLongLinkStreamResponse longLinkResponse = 10;
    WeChatSocketResponse socketResponse = 11;
    WeChatPushSubscribeResponse pushSubscribeResponse = 12;
    WeChatFileUploadResponse fileUploadResponse = 13;
  }
}

message WeChatStreamResponseReply {
  bool eof = 1;
  oneof payload {
    WeChatLongLinkStreamResponseReply longLinkResponseReply = 10;
    WeChatSocketResponseReply socketResponseReply = 11;
    WeChatPushSubscribeResponseReply pushSubscribeResponseReply = 12;
    WeChatFileUploadResponseReply fileUploadResponseReply = 13;
  }
}

enum LoginPolicy {
  DEFAULT = 0;
  SKIP_ONE_CLICK = 1;
}

message LoginRequest {
  LoginPolicy policy = 1;
}

message LoginResponse {
}

enum LoginStatus {
  START = 0;
  ONE_CLICK_EVENT = 1;
  QRCODE_EVENT = 2;
  AUTH_SUCCESS = 3;
  SYNC = 4;
}

message LoginUpdateEvent {
  LoginStatus status = 1;
  oneof payload {
    LoginType loginType = 2;
    QRCodeEvent qrCodeEvent = 3;
    AuthInfo authInfo = 4;
    SyncEvent syncEvent = 5;
  }
}

enum LoginType {
  QRLogin = 0;
  AutoLogin = 1;
  OneClickLogin = 2;
}

enum QRCodeStatus {
  NEW = 0;
  SCANNED = 1;
  CONFIRMED = 2;
  CANCELLED = 3;
  EXPIRED = 4;
  UNKNOWN_ERROR = 5;
}

message QRCodeEvent {
  QRCodeStatus status = 1;
  string imageUrl = 2;
  uint32 expireAt = 3;
  Contact contact = 4;
}

message AuthInfo {
  Contact selfContact = 1;
}

message LogoutRequest {

}

message LogoutResponse {

}

message LongLinkInitRequest {
  string longLinkId = 1;
}

message LongLinkInitResponse {
}

message LongLinkPackRequest {
  string longLinkId = 1;
  string messageId = 2;
}

message LongLinkPackResponse {
  bytes payload = 1;
}

message LongLinkUnpackRequest {
  string longLinkId = 1;
  bytes payload = 2;
}

message LongLinkUnpackResponse {
  repeated LongLinkMessage message = 1;
}

enum LongLinkMessageType {
  NORMAL_MESSAGE = 0;
  PUSH_MESSAGE = 1;
}

message LongLinkMessage {
  LongLinkMessageType type = 1;
  string messageId = 2;
  oneof payload {
    LongLinkMessagePush push = 10;
  }
}

enum LongLinkMessagePushType {
  NEW_MESSAGE = 0;
  LOGIN_STATUS_NOTIFY = 1;
}

message LongLinkMessagePush {
  LongLinkMessagePushType type = 1;
}

message LongLinkHeartBeatRequest {
  string longLinkId = 1;
}

message LongLinkHeartBeatResponse {
}

message MessageRevokeInfo {
  string clientMsgId = 1;
  string newClientMsgId = 2;
  int32 createTime = 3;
}

message SendTextMessageRequest {
  string toUserName = 1;
  string content = 2;
  repeated string at = 3;
}

message SendTextMessageResponse {
  string msgId = 1;
  MessageRevokeInfo messageRevokeInfo = 2;
}

message SendImageMessageRequest {
  string toUserName = 1;
  oneof payload {
    bytes image = 2;
    FileUploadImageParams imageParams = 3;
  }
}

message SendImageMessageResponse {
  string msgId = 1;
  MessageRevokeInfo messageRevokeInfo = 2;
}

message SendAppMessageRequest {
  string toUserName = 1;
  oneof payload {
    AppMessageLink link = 2;
    AppMessageMiniProgram miniProgram = 3;
  }
}

message AppMessageLink {
  string title = 1;
  string description = 2;
  string url = 3;
  bytes thumbImage = 4;
  string thumbURL = 5;
}

message AppMessageMiniProgram {
  string title = 1;
  string description = 2;
  string url = 3;
  string mpAppUserName = 4;
  string mpAppName = 5;
  string mpAppId = 6;
  string mpAppIconURL = 7;
  string mpAppPath = 8;
  oneof AppMessageMiniProgramThumb {
    bytes thumbImage = 9;
    FileUploadImageParams thumbParams = 10;
  }
}

message SendAppMessageResponse {
  string msgId = 1;
  MessageRevokeInfo messageRevokeInfo = 2;
  string msgContent = 3;
}

message AcceptUserRequest {
  string stranger = 1;
  string ticket = 2;
  string userName = 3;
  int32 scene = 4;
}

message AcceptUserResponse {
}

enum AddContactScene {
  MOBILE_PHONE = 0;
  WECHAT_ID = 1;
  QQ_ID = 2;
  CHATROOM = 3;
  CONTACT_QR = 4;
  CONTACT_CARD = 5;
  SINGLE_CHAT = 6;
}

message AddContactRequest {
  string stranger = 1;
  string ticket = 2;
  AddContactScene scene = 3;
  string content = 4;
}

message AddContactResponse {
}

message DeleteContactRequest {
  string userName = 1;
}

message DeleteContactResponse {
}

message GetContactRequest {
  string userName = 1;
  string ticket = 2;
}

message GetContactResponse {
  Contact contact = 1;
}

message GetContactQRCodeRequest {
  string userName = 1;
  int32 style = 2;
}

message GetContactQRCodeResponse {
  bytes qrcode = 1;
  string description = 6;
}

message SearchContactRequest {
  string userName = 1;
}

message SearchContactResponse {
  Contact contact = 1;
  string encryptUserName = 2;
  string antispamTicket = 3;
  AddContactScene toAddScene = 4;
}

message UpdateSelfNickNameRequest {
  string nickName = 1;
}

message UpdateSelfNickNameResponse {
}

message UpdateSelfSignatureRequest {
  string signature = 1;
}

message UpdateSelfSignatureResponse {
}

message ZombieTestRequest {
  string userName = 1;
}

enum ZombieStatue {
  STRANGER = 0;
  FRIEND = 1;
  ZOMBIE = 2;
}

message ZombieTestResponse {
  ZombieStatue zombieStatues = 1;
}

message UpdateContactRemarkRequest {
  string userName = 1;
  string remark = 2;
}

message UpdateContactRemarkResponse {
}

message CreateChatRoomRequest {
  repeated string userNames = 1;
}

message CreateChatRoomResponse {
  string roomId = 1;
  string topic = 2;
  string avatar = 3;
}

message GetChatRoomMembersRequest {
  string roomId = 1;
}

message GetChatRoomMembersResponse {
  repeated ChatRoomMember member = 1;
}

message ChatRoomMember {
  string userName = 1;
  string nickName = 2;
  string displayName = 3;
  string avatar = 4;
  string inviterUserName = 5;
}

message GetChatRoomQrCodeRequest {
  string roomId = 1;
}

message GetChatRoomQrCodeResponse {
  bytes qrcode = 1;
  string description = 6;
}

message GetChatRoomMemberRequest {
  string roomId = 1;
  string userName = 2;
}

message GetChatRoomMemberResponse {
  Contact contact = 1;
}

message GetChatRoomAnnouncementRequest {
  string roomId = 1;
}

message GetChatRoomAnnouncementResponse {
  string announcement = 1;
  string announcementEditor = 2;
  int64 announcementPublishTime = 3;
}

message SetChatRoomAnnouncementRequest {
  string roomId = 1;
  string announcement = 2;
}

message SetChatRoomAnnouncementResponse {
}

message AddChatRoomMemberRequest {
  string roomId = 1;
  string userName = 2;
}

enum AddChatRoomMemberType {
  ALREADY_IN_ROOM = 0;
  ADD = 1;
  INVITE = 2;
  NEED_ADMIN_APPROVE = 3;
}

message AddChatRoomMemberResponse {
  AddChatRoomMemberType addType = 1;
}

message DeleteChatRoomMemberRequest {
  string roomId = 1;
  string userName = 2;
}

message DeleteChatRoomMemberResponse {
}

message SetChatRoomNameRequest {
  string roomId = 1;
  string name = 2;
}

message SetChatRoomNameResponse {
}

message QuitChatRoomRequest {
  string roomId = 1;
}

message QuitChatRoomResponse {

}

message AcceptChatRoomInvitationRequest {
  string inviterId = 1;
  string invitationUrl = 2;
}

message AcceptChatRoomInvitationResponse {
}

message SnsSendMomentRequest {
  SnsSendMomentOptions options = 1;
  oneof payload {
    SnsSendMomentText text = 2;
    SnsSendMomentImages images = 3;
    SnsSendMomentUrl url = 4;
  };
}

message SnsSendMomentText {
  string text = 1;
}

message SnsSendMomentImages {
  string text = 1;
  repeated SnsImageUrl imageUrl = 2;
}

message SnsSendMomentUrl {
  string text = 1;
  string urlTitle = 2;
  string url = 3;
  SnsImageUrl imageUrl = 4;
}

message SnsSendMomentResponse {
  SnsMoment moment = 1;
}

message SnsImageUrl {
  string md5 = 1;
  string url = 2;
  string thumbUrl = 3;
  int64 height = 4;
  int64 width = 5;
  int64 totalSize = 6;
}

message SnsSendMomentOptions {
  bool isPrivate = 1;
  repeated string canSeeUserName = 2;
  repeated string canNotSeeUserName = 3;
  repeated string atUserName = 4;
}

message SnsForwardMomentRequest {
  string momentContentXml = 1;
  SnsSendMomentOptions options = 2;
}

message SnsForwardMomentResponse {
  SnsMoment moment = 1;
}

message SnsGetUserPageRequest {
  string userName = 1;
  string maxId = 2;
}

message SnsGetUserPageResponse {
  repeated SnsMoment moment = 1;
  string tips = 2;
}

message SnsSendCommentRequest {
  string momentId = 1;
  string momentOwnerUserName = 2;
  string commentText = 3;
  SnsSendCommentReplyTo replyTo = 4;
}

message SnsSendCommentReplyTo {
  string commentId = 1;
  string commentUserName = 2;
  string commentNickname = 3;
}

message SnsSendCommentResponse {
  SnsMoment moment = 1;
}

message SnsUploadImageRequest {
  bytes image = 1;
  string description = 2;
}

message SnsUploadImageResponse {
  int64 id = 1;
  SnsImageUrl url = 2;
}

message SnsGetTimelineRequest {
  string maxId = 1;
}

message SnsGetTimelineResponse {
  repeated SnsMoment moment = 1;
}

message SnsGetMomentRequest {
  string momentId = 1;
}

message SnsGetMomentResponse {
  SnsMoment moment = 1;
}

message SnsLikeMomentRequest {
  string momentId = 1;
  string momentOwnerUserName = 2;
}

message SnsLikeMomentResponse {
  SnsMoment moment = 1;
}

message SnsUnlikeMomentRequest {
  string momentId = 1;
}

message SnsUnlikeMomentResponse {
}

message SnsRemoveMomentCommentRequest {
  string momentId = 1;
  string commentId = 2;
}

message SnsRemoveMomentCommentResponse {
}

message SnsMakeMomentPrivateRequest {
  string momentId = 1;
}

message SnsMakeMomentPrivateResponse {
}

message SnsMakeMomentPublicRequest {
  string momentId = 1;
}

message SnsMakeMomentPublicResponse {
}

message SnsRemoveMomentRequest {
  string momentId = 1;
}

message SnsRemoveMomentResponse {
}

message AddLabelRequest {
  string label = 1;
}

message AddLabelResponse {
  int64 labelId = 1;
}

message RemoveLabelRequest {
  int64 labelId = 1;
}

message RemoveLabelResponse {
}

message GetLabelListRequest {
}

message GetLabelListResponse {
  repeated Label label = 1;
}

message Label {
  string name = 1;
  int32 id = 2;
}

message SetContactLabelRequest {
  string userName = 1;
  repeated int64 labelId = 2;
}

message SetContactLabelResponse {
}

message SyncEvent {
  repeated Contact contact = 1;
  repeated Message message = 2;
}

message Contact {
  string userName = 1;
  string nickName = 2;
  string avatar = 3;
  int32 gender = 4;
  string signature = 5;
  string alias = 6;
  string label = 7;
  string remark = 8;
  string city = 9;
  string province = 10;
  string country = 11;
  int32 contactAddScene = 12;
  bool stranger = 13;
  string encryptUserName = 14;
  repeated string phone = 15;

  string chatRoomOwnerUserName = 100;
  int32 chatRoomMaxCount = 101;
  repeated ChatRoomMember chatRoomMember = 102;
}

message Message {
  string id = 1;
  int32 type = 2;
  int32 createTime = 3;
  string fromUserName = 4;
  string toUserName = 5;
  string content = 6;
  string pushContent = 7;
  bytes binaryPayload = 8;
  repeated string at = 9;
}

message Host {
  string host = 1;
  int32 port = 2;
}

message SnsMoment {
  string id = 1;
  string userName = 2;
  string nickName = 3;
  int32 createTime = 4;
  string content = 5;
  bool isRichText = 6;
  repeated SnsMomentComment like = 7;
  repeated SnsMomentComment comment = 8;
  repeated SnsMomentComment with = 9;
}

message SnsMomentComment {
  string id = 1;
  int32 createTime = 2;
  string userName = 3;
  string nickName = 4;
  string content = 5;
  bool isRichText = 6;
  string replyCommentId = 7;
  string replyUserName = 8;
}

message SystemKickOutEvent {
  int32 errorCode = 1;
  string errorMessage = 2;
}

message SystemLongLinkUpdateEvent {
  Host longLinkHost = 1;
  bool reconnectImmediately = 2;
}

message SystemNoticeEvent {
  string notice = 1;
}

message ClientStopEvent {
}

message SystemEventRequest {
  oneof payload {
    SystemKickOutEvent kickOutEvent = 1;
    SystemLongLinkUpdateEvent longLinkUpdateEvent = 2;
    SystemNoticeEvent noticeEvent = 3;
    ClientStopEvent clientStopEvent = 4;
  }
}

message SystemEventResponse {
}

enum SyncRequestScene {
  ON_PUSH = 0;
  LONGLINK_INIT = 1;
}
message SyncRequest {
  SyncRequestScene scene = 1;
}

message SyncResponse {
  SyncEvent payload = 1;
}

message GetMessageImageRequest {
  ImageType imageType = 1;
  string messageContent = 2;
  string messageToUserName = 3;
}

enum ImageType {
  THUMB = 0;
  NORMAL = 1;
  HD = 2;
}

message GetMessageImageResponse {
  FileDownloadRequest fileDownloadRequest = 1;
  ImageType imageType = 2;
}

message FileDownloadRequest {
  Host host = 1;
  bytes payload = 2;
  bytes unpackAesKey = 3;
}

message SyncContactRequest {
}

message SyncContactResponse {
}

message GetMessageVoiceRequest {
  string messageId = 1;
  string messageContent = 2;
  string messageToUserName = 3;
}

message GetMessageVoiceResponse {
  bytes voice = 1;
}

message GetMessageVideoThumbRequest {
  string messageContent = 1;
  string messageToUserName = 2;
}

message GetMessageVideoThumbResponse {
  FileDownloadRequest fileDownloadRequest = 1;
}

message GetMessageVideoRequest {
  string messageContent = 1;
  string messageToUserName = 2;
}

message GetMessageVideoResponse {
  FileDownloadRequest fileDownloadRequest = 1;
}

message GetMessageAttachRequest {
  string messageContent = 1;
  string messageToUserName = 2;
}

message GetMessageAttachResponse {
  FileDownloadRequest fileDownloadRequest = 1;
}

message GetMessageAttachThumbRequest {
  string messageContent = 1;
  string messageToUserName = 2;
}

message GetMessageAttachThumbResponse {
  FileDownloadRequest fileDownloadRequest = 1;
}

message ForwardMessageRequest {
  string toUserName = 1;
  int32 messageType = 2;
  string messageContent = 3;
  string messageToUserName = 4;
}

message ForwardMessageResponse {
  string msgId = 1;
  MessageRevokeInfo messageRevokeInfo = 2;
  string msgContent = 3;
}

message RevokeMessageRequest {
  string msgId = 1;
  MessageRevokeInfo messageRevokeInfo = 2;
  string fromUserName = 3;
  string toUserName = 4;
  int32 revokeSeq = 5;
}

message RevokeMessageResponse {
}

message SendContactCardMessageRequest {
  string toUserName = 1;
  Contact contact = 2;
}

message SendContactCardMessageResponse {
  string msgId = 1;
  MessageRevokeInfo messageRevokeInfo = 2;
}

message SendVoiceMessageRequest {
  string toUserName = 1;
  bytes voice = 2;
  int32 voiceLength = 3;
}

message SendVoiceMessageResponse {
  string msgId = 1;
  MessageRevokeInfo messageRevokeInfo = 2;
}

message SendVideoMessageRequest {
  string toUserName = 1;
  oneof payload {
    bytes video = 2;
    FileUploadVideoParams videoParams = 3;
  }
}

message SendVideoMessageResponse {
  string msgId = 1;
  MessageRevokeInfo messageRevokeInfo = 2;
}

message SendFileMessageRequest {
  string toUserName = 1;
  string fileName = 2;
  oneof payload {
    bytes file = 3;
    FileUploadFileParams fileParams = 4;
  }
}

message SendFileMessageResponse {
  string msgId = 1;
  MessageRevokeInfo messageRevokeInfo = 2;
}

message GetMessageMiniProgramThumbRequest {
  string messageContent = 1;
  string messageToUserName = 2;
}

message GetMessageMiniProgramThumbResponse {
  FileDownloadRequest fileDownloadRequest = 1;
}

enum EncryptedFileType {
  IMAGE_THUMB = 0;
  IMAGE_NORMAL = 1;
  IMAGE_HD = 2;
  VIDEO = 3;
  FILE = 4;
}

message GetEncryptedFileRequest {
  string fileId = 1;
  bytes fileKey = 2;
  EncryptedFileType fileType = 3;
  bool isChatRoomMessage = 4;
}

message GetEncryptedFileResponse {
  FileDownloadRequest fileDownloadRequest = 1;
}

message SendEmojiMessageRequest {
  string toUserName = 1;
  string md5 = 2;
  int32 len = 3;
  int32 type = 4;
  string gameext = 5;
}

message SendEmojiMessageResponse {
  string msgId = 1;
  MessageRevokeInfo messageRevokeInfo = 2;
}
